--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <script src="script.js"></script>
     <h1>Astronauts</h1>
     <div id="container">
-        <!-- List of astronauts will be added here dynamically -->
+
+
     </div>
+    
+      <h6>Astronaut count:</h6>
+      <div id="count">
+
+
+      </div>
   </body>
 </html>
